src/test/deca/syntax/valid/synt/IfWhile.deca
// Description:
//    Programme boucle if et while imbriquée
//
// Resultats:
//      ok
//
// Historique:
//    cree le 01/01/2022

{
    while(true){
        if(true){
            
        }
    }

}
